chore: Header zu 'OPTIMIZE YOURSELF powered by Christian Döhl'

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <header class="header-banner">
             <div class="header-logo">
                 <div class="star-icon"></div>
-                <h1>cd-app</h1>
+                <h1>OPTIMIZE YOURSELF</h1>
+                <span class="header-powered">powered by Christian Döhl</span>
             </div>
             <div class="header-status">
                 <span class="status-dot live"></span>
